# skibidi67.ceo

./: .gitignore  Cargo.toml  Dockerfile  Rocket.toml  docker-compose.yml
src/: app.rs  auth.rs  error.rs  main.rs  models.rs  routes.rs  state.rs  tests.rs
src/routes/: audio.rs  auth.rs  feed.rs  images.rs  media.rs  text.rs  ui.rs  videos.rs
synthemes/: rose-pine.tmTheme
templates/: admin.html.tera  audio_listing.html.tera  audio_player.html.tera  base.html.tera  embed.html.tera  image_listing.html.tera  image_viewer.html.tera  listing.html.tera  message.html.tera  player.html.tera  text_listing.html.tera  text_viewer.html.tera  upload.html.tera  videos.html.tera
