[package]
name = "skibidi67"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
color-eyre = "0.6.5"
dashmap = "6.1.0"
dotenvy = "0.15.7"
hashbrown = { version = "0.16.1", features = ["serde"] }
hex = { version = "0.4.3", features = ["serde"] }
mimalloc = "0.1.48"
rand = "0.10.0"
reqwest = { version = "0.13.2", features = ["json"] }
rocket = { version = "0.5.1", features = ["json"] }
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.18"
tlsh2 = { version = "0.3", features = ["diff"] }
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.21.0", features = ["v4"] }
